--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -72,16 +72,49 @@
 }
 
 .TrialBtn {
-  font-weight: 600;
-  border: none;
-  padding: .9rem 1.5rem 1.1rem;
+  position: relative;
+  z-index: 1;
+  display: inline-block;
+  padding: 0.9rem 1.5rem 1.1rem;
   font-size: 1rem;
+  font-weight: 600;
+  line-height: 1;
   color: #fff;
-  background-image: linear-gradient(180deg, #fff2 0%, #fff0 100%);
-  background-color: #1b1f23;
-  border-radius: 8px;
   text-align: center;
-  transition: all .2s;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  user-select: none;
+  background: linear-gradient(180deg,#ffffff26 0%,#ffffff00 100%), #1b1f23;
+  border: 0;
+  border-radius: 0.375rem;
+  transition: box-shadow .2s;
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+.TrialBtn::before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  content: "";
+  background: linear-gradient(180deg,#ffffff26 0%,#ffffff00 100%);
+  border-radius: inherit;
+  opacity: 0;
+  opacity: 0;
+  transition: opacity .2s;
+  background-blend-mode: normal;
+}
+
+.TrialBtn:hover::before {
+  opacity: 1;
+}
+
+.TrialBtn:hover {
+  box-shadow: 0 3px 2px #0001,0 7px 5px #0001,0 12px 10px #0001,0 22px 18px #0001,0 42px 33px #0001,0 100px 80px #0001;
 }
 
 .ContactBtn {
@@ -97,4 +130,9 @@
   box-sizing: border-box;
   margin-left: 10px;
   background-clip: padding-box;
+  box-shadow: rgb(0, 0, 0/15%) 0 0 0 1px inset;
+}
+
+.ContactBtn:hover {
+  box-shadow: rgb(0, 0, 0) 0 0 0 2px inset;
 }
